# diccy

./: .gitignore  ARCHITECTURE.md  BATTLECHAIN_ANALYSIS.md  BATTLECHAIN_CRITICAL_ANALYSIS.md  BATTLECHAIN_INTER_CONTRACT_REQUIREMENTS.md  BATTLECHAIN_LINERA_ARCHITECTURE.md  BATTLECHAIN_PHASE1_IMPLEMENTATION.md  BATTLECHAIN_PHASE2_IMPLEMENTATION.md  BATTLECHAIN_TOKEN_INTEGRATION.md  BATTLECHAIN_TOKEN_SYSTEM.md  COMPREHENSIVE_CODE_ANALYSIS.md  COMPREHENSIVE_CONTRACT_ANALYSIS.md  Cargo.toml  Dockerfile  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LEarn.md  LINERA_BLOCKCHAIN_RESEARCH.md  LINERA_RESEARCH.md  MICROCARD_ANALYSIS.md  Majorules.md  PLAYER_CHAIN_ANALYSIS.md  README.md  REORGANIZATION_PROGRESS.md  compose.yaml  diccy-improved-architecture.md  fighter_cargo.txt  fighter_readme.md  run.bash
battlechain-linera/: CODE_REORGANIZATION_PLAN.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  FRONTEND_INTEGRATION_GUIDE.md  GAME_FLOW_ANALYSIS.md  PHASE4_5_ANALYSIS.md  PHASE4_5_IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  TESTING_COMPLETE.md  TESTING_STATUS.md  docker-compose.yaml  run.bash
battlechain-linera/battle-chain/: Cargo.toml
battlechain-linera/battle-chain/src/: contract.rs  lib.rs  service.rs  state.rs
battlechain-linera/battle-chain/tests/: battle_tests.rs
battlechain-linera/battle-token/: Cargo.toml
battlechain-linera/battle-token/src/: contract.rs  lib.rs  service.rs  state.rs
battlechain-linera/battle-token/tests/: token_tests.rs
battlechain-linera/docs/: ARCHITECTURE.md
battlechain-linera/entropy-chain/: Cargo.toml
battlechain-linera/entropy-chain/src/: lib.rs
battlechain-linera/matchmaking-chain/: Cargo.toml
battlechain-linera/matchmaking-chain/src/: contract.rs  lib.rs  service.rs  state.rs
battlechain-linera/matchmaking-chain/tests/: matchmaking_tests.rs
battlechain-linera/player-chain/: Cargo.toml
battlechain-linera/player-chain/src/: contract.rs  lib.rs  service.rs  state.rs
battlechain-linera/player-chain/tests/: player_tests.rs
battlechain-linera/prediction-chain/: Cargo.toml
battlechain-linera/prediction-chain/src/: contract.rs  lib.rs  service.rs  state.rs
battlechain-linera/prediction-chain/tests/: prediction_tests.rs
battlechain-linera/registry-chain/: Cargo.toml
battlechain-linera/registry-chain/src/: contract.rs  lib.rs  service.rs  state.rs
battlechain-linera/registry-chain/tests/: registry_tests.rs
battlechain-linera/scripts/: build-all.sh  build.sh  deploy-all.sh  deploy-local.sh  test-all.sh
battlechain-linera/shared-events/: Cargo.toml
battlechain-linera/shared-events/src/: lib.rs
battlechain-linera/shared-types/: Cargo.toml
battlechain-linera/shared-types/src/: lib.rs
battlechain-linera/tests/: README_TESTS.md  test_battle_flow.sh  test_battlechain_deployment.sh  test_end_to_end.sh
src/: battle_contract.rs  contract.rs  fighter_contract.rs  fighter_lib.rs  fighter_service.rs  fighter_state.rs  fighter_tests.rs  lib.rs  lobby_contract.rs  player_contract.rs  random.rs  service.rs  state.rs
tests/: single_chain.rs
wallet/: keystore.json  wallet.json
wallet/wallet.db/table_linera/: 000043.sst  000050.sst  IDENTITY  LOG  LOG.old.1763627864441588  LOG.old.1763627864501444  LOG.old.1763627873314016  LOG.old.1763627873415084  LOG.old.1763627885224315  LOG.old.1763627885326603  LOG.old.1763627892028029  LOG.old.1763627892150742  LOG.old.1763627914287782  LOG.old.1763627914398177  LOG.old.1763627914448785  LOG.old.1763627914531260  LOG.old.1763628235037032  LOG.old.1763628235142084  LOG.old.1763628235204689  LOG.old.1763628235282282  LOG.old.1763628317821563  LOG.old.1763628317909864  LOG.old.1763628317960030  LOG.old.1763628318030009  LOG.old.1763628363300791  LOG.old.1763628363382968  LOG.old.1763628363441772  LOG.old.1763628363504420  LOG.old.1763628397431383  LOG.old.1763628397521825  LOG.old.1763628418358356  LOG.old.1763628418438730  LOG.old.1763628433815196  LOG.old.1763628433895063  LOG.old.1763628944119591  LOG.old.1763628944213890  LOG.old.1763628944268633  LOG.old.1763628944334611  MANIFEST-000152  OPTIONS-000154
web-frontend/: package-lock.json  package.json
web-frontend/public/: index.html
web-frontend/src/: App.js
