[package]
name = "majorules"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.17", default-features = false }
linera-sdk = "0.15.6"
futures = { version = "0.3 "}
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
getrandom = { version = "0.2.12", default-features = false, features = ["custom"] }
rand = "0.8.5"


[dev-dependencies]
linera-sdk = { version = "0.15.6", features = ["test", "wasmer"] }
tokio = { version = "1.40", features = ["rt", "sync"] }

[[bin]]
name = "majorules_contract"
path = "src/contract.rs"

[[bin]]
name = "majorules_service"
path = "src/service.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
