[package]
name = "battle-token"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "=7.0.17"
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", tag = "v0.15.5", features = ["wasmer"] }
linera-views = { git = "https://github.com/linera-io/linera-protocol.git", tag = "v0.15.5" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[[bin]]
name = "battle_token_contract"
path = "src/contract.rs"

[[bin]]
name = "battle_token_service"
path = "src/service.rs"


