[package]
name = "registry-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "7.0.11"
battlechain-shared-types = { path = "../shared-types" }
linera-sdk = { version = "0.15.5", features = ["wasmer"] }
linera-views = { version = "0.15.5" }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]

[[bin]]
name = "registry-chain"
path = "src/main.rs"
