[package]
name = "registry-chain"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "=7.0.17"
battlechain-shared-events = { path = "../shared-events" }
battlechain-shared-types = { path = "../shared-types" }
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", tag = "v0.15.5", features = ["wasmer"] }
linera-views = { git = "https://github.com/linera-io/linera-protocol.git", tag = "v0.15.5" }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[[bin]]
name = "registry_chain_contract"
path = "src/contract.rs"

[[bin]]
name = "registry_chain_service"
path = "src/service.rs"
