[package]
name = "battlechain-shared-types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
linera-sdk = { git = "https://github.com/linera-io/linera-protocol.git", features = ["wasmer"] }
thiserror = "1.0"
async-graphql = "7.0"

[lib]
crate-type = ["cdylib", "rlib"]
